added divs for time blocks

--- a/index.html
+++ b/index.html
@@ -30,7 +30,62 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <!-- 9am -->
+      <div class="row">
+        <div class="hour" class="col-md-1">9am</div>
+        <div class="time-block" class="col-md-10">Sample Event</div>
+        <div class="col-mid-1">Button</div>
+      </div>
+      <!-- 10am -->
+      <div class="row">
+        <div class="hour" class="col-md-1">10am</div>
+        <div class="time-block" class="col-md-10">Sample Event</div>
+        <div class="col-mid-1">Button</div>
+      </div>
+      <!-- 11am -->
+      <div class="row">
+        <div class="hour" class="col-md-1">11am</div>
+        <div class="time-block" class="col-md-10">Sample Event</div>
+        <div class="col-mid-1">Button</div>
+      </div>
+      <!-- 12pm -->
+      <div class="row">
+        <div class="hour" class="col-md-1">12pm</div>
+        <div class="time-block" class="col-md-10">Sample Event</div>
+        <div class="col-mid-1">Button</div>
+      </div>
+      <!-- 1pm -->
+      <div class="row">
+        <div class="hour" class="col-md-1">1pm</div>
+        <div class="time-block" class="col-md-10">Sample Event</div>
+        <div class="col-mid-1">Button</div>
+      </div>
+      <!-- 2pm -->
+      <div class="row">
+        <div class="hour" class="col-md-1">2pm</div>
+        <div class="time-block" class="col-md-10">Sample Event</div>
+        <div class="col-mid-1">Button</div>
+      </div>
+      <!-- 3pm -->
+      <div class="row">
+        <div class="hour" class="col-md-1">3pm</div>
+        <div class="time-block" class="col-md-10">Sample Event</div>
+        <div class="col-mid-1">Button</div>
+      </div>
+      <!-- 4pm -->
+      <div class="row">
+        <div class="hour" class="col-md-1">4pm</div>
+        <div class="time-block" class="col-md-10">Sample Event</div>
+        <div class="col-mid-1">Button</div>
+      </div>
+      <!-- 5pm -->
+      <div class="row">
+        <div class="hour" class="col-md-1">5pm</div>
+        <div class="time-block" class="col-md-10">Sample Event</div>
+        <div class="col-mid-1">Button</div>
+      </div>
     </div>
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
