added save buttons in html

--- a/index.html
+++ b/index.html
@@ -34,55 +34,55 @@
       <div class="row">
         <div class="hour" class="col-md-1">9am</div>
         <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1">Button</div>
+        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 10am -->
       <div class="row">
         <div class="hour" class="col-md-1">10am</div>
         <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1">Button</div>
+        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 11am -->
       <div class="row">
         <div class="hour" class="col-md-1">11am</div>
         <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1">Button</div>
+        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 12pm -->
       <div class="row">
         <div class="hour" class="col-md-1">12pm</div>
         <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1">Button</div>
+        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 1pm -->
       <div class="row">
         <div class="hour" class="col-md-1">1pm</div>
         <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1">Button</div>
+        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 2pm -->
       <div class="row">
         <div class="hour" class="col-md-1">2pm</div>
         <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1">Button</div>
+        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 3pm -->
       <div class="row">
         <div class="hour" class="col-md-1">3pm</div>
         <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1">Button</div>
+        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 4pm -->
       <div class="row">
         <div class="hour" class="col-md-1">4pm</div>
         <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1">Button</div>
+        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 5pm -->
       <div class="row">
         <div class="hour" class="col-md-1">5pm</div>
         <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1">Button</div>
+        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
       </div>
     </div>
     
