updated containiers to take up correct width

--- a/index.html
+++ b/index.html
@@ -32,60 +32,59 @@
       <!-- Timeblocks go here -->
       <!-- 9am -->
       <div class="row">
-        <div class="hour" class="col-md-1">9am</div>
-        <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="col-md-1 hour">9:00am</div>
+        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 10am -->
       <div class="row">
-        <div class="hour" class="col-md-1">10am</div>
-        <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="col-md-1 hour">10:00am</div>
+        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 11am -->
       <div class="row">
-        <div class="hour" class="col-md-1">11am</div>
-        <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="col-md-1 hour">11:00am</div>
+        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 12pm -->
       <div class="row">
-        <div class="hour" class="col-md-1">12pm</div>
-        <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="col-md-1 hour">12:00pm</div>
+        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
-      <!-- 1pm -->
+      <!-- 1pam -->
       <div class="row">
-        <div class="hour" class="col-md-1">1pm</div>
-        <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="col-md-1 hour">1:00pm</div>
+        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
-      <!-- 2pm -->
+      <!-- 2pmam -->
       <div class="row">
-        <div class="hour" class="col-md-1">2pm</div>
-        <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="col-md-1 hour">2:00pm</div>
+        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 3pm -->
       <div class="row">
-        <div class="hour" class="col-md-1">3pm</div>
-        <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="col-md-1 hour">3:00pm</div>
+        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
-      <!-- 4pm -->
+      <!-- 4pm-->
       <div class="row">
-        <div class="hour" class="col-md-1">4pm</div>
-        <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="col-md-1 hour">4:00pm</div>
+        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 5pm -->
       <div class="row">
-        <div class="hour" class="col-md-1">5pm</div>
-        <div class="time-block" class="col-md-10">Sample Event</div>
-        <div class="col-mid-1" class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="col-md-1 hour">5:00pm</div>
+        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
     </div>
-    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
