updated text area

--- a/index.html
+++ b/index.html
@@ -33,55 +33,73 @@
       <!-- 9am -->
       <div class="row">
         <div class="col-md-1 hour">9:00am</div>
-        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-10 time-block">
+          <textarea></textarea>
+        </div>
         <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 10am -->
       <div class="row">
         <div class="col-md-1 hour">10:00am</div>
-        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-10 time-block">
+          <textarea></textarea>
+        </div>
         <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 11am -->
       <div class="row">
         <div class="col-md-1 hour">11:00am</div>
-        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-10 time-block">
+          <textarea></textarea>
+        </div>
         <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 12pm -->
       <div class="row">
         <div class="col-md-1 hour">12:00pm</div>
-        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-10 time-block">
+          <textarea></textarea>
+        </div>
         <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 1pam -->
       <div class="row">
         <div class="col-md-1 hour">1:00pm</div>
-        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-10 time-block">
+          <textarea></textarea>
+        </div>
         <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 2pmam -->
       <div class="row">
         <div class="col-md-1 hour">2:00pm</div>
-        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-10 time-block">
+          <textarea></textarea>
+        </div>
         <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 3pm -->
       <div class="row">
         <div class="col-md-1 hour">3:00pm</div>
-        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-10 time-block">
+          <textarea></textarea>
+        </div>
         <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 4pm-->
       <div class="row">
         <div class="col-md-1 hour">4:00pm</div>
-        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-10 time-block">
+          <textarea></textarea>
+        </div>
         <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
       <!-- 5pm -->
       <div class="row">
         <div class="col-md-1 hour">5:00pm</div>
-        <div class="col-md-10 time-block">Sample Event</div>
+        <div class="col-md-10 time-block">
+          <textarea></textarea>
+        </div>
         <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
       </div>
     </div>
