created function to pull hour values and update backgrounds

--- a/index.html
+++ b/index.html
@@ -31,80 +31,63 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <!-- 9am -->
-      <div class="row">
+      <div class="row time-block" id="9">
         <div class="col-md-1 hour">9:00am</div>
-        <div class="col-md-10 time-block">
-          <textarea></textarea>
-        </div>
-        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
+        <textarea  class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
       <!-- 10am -->
-      <div class="row">
+      <div class="row time-block" id="10">
         <div class="col-md-1 hour">10:00am</div>
-        <div class="col-md-10 time-block">
-          <textarea></textarea>
-        </div>
-        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
       <!-- 11am -->
-      <div class="row">
+      <div class="row time-block" id="11">
         <div class="col-md-1 hour">11:00am</div>
-        <div class="col-md-10 time-block">
-          <textarea></textarea>
-        </div>
-        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
+        <textarea  class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
       <!-- 12pm -->
-      <div class="row">
+      <div class="row time-block" id="12">
         <div class="col-md-1 hour">12:00pm</div>
-        <div class="col-md-10 time-block">
-          <textarea></textarea>
-        </div>
-        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
+        <textarea  class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <!-- 1pam -->
-      <div class="row">
+      <!-- 1pm -->
+      <div class="row time-block" id="13" >
         <div class="col-md-1 hour">1:00pm</div>
-        <div class="col-md-10 time-block">
-          <textarea></textarea>
-        </div>
-        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <!-- 2pmam -->
-      <div class="row">
+      <!-- 2pm -->
+      <div class="row time-block" id="14">
         <div class="col-md-1 hour">2:00pm</div>
-        <div class="col-md-10 time-block">
-          <textarea></textarea>
-        </div>
-        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
+        <textarea  class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
       <!-- 3pm -->
-      <div class="row">
+      <div class="row time-block" id="15">
         <div class="col-md-1 hour">3:00pm</div>
-        <div class="col-md-10 time-block">
-          <textarea></textarea>
-        </div>
-        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <!-- 4pm-->
-      <div class="row">
+      <!-- 4pm -->
+      <div class="row time-block" id="16">
         <div class="col-md-1 hour">4:00pm</div>
-        <div class="col-md-10 time-block">
-          <textarea></textarea>
-        </div>
-        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
       <!-- 5pm -->
-      <div class="row">
+      <div class="row time-block" id="17">
         <div class="col-md-1 hour">5:00pm</div>
-        <div class="col-md-10 time-block">
-          <textarea></textarea>
-        </div>
-        <div class="col-md-1 saveBtn"><i class="fas fa-save"></i></div>
+        <textarea  class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
